Optimize signing level